Fix solution space view not showing rightmost column

--- a/static/css/visualizations.css
+++ b/static/css/visualizations.css
@@ -45,6 +45,7 @@
 	white-space: nowrap;
 	min-width: 100%;
 	padding-left: 40px;
+	padding-right: 40px;
 	height: 40px;
 	position: absolute;
 	left: 0;
